# BigEd

./: .dockerignore  .gitattributes  .gitignore  AUDIT_TRACKER.md  BETA_PREP.md  CLAUDE.CHATS.md  CLAUDE.C_REVIEW.md  CLAUDE.USER.md  CLAUDE.md  CONTRIBUTING.md  CROSS_PLATFORM.md  Dockerfile  Dockerfile.dashboard  FRAMEWORK_BLUEPRINT.md  GEMINI.md  GEMINI_DOC_CLEANUP.md  LICENSE  MACHINE_PROFILE.md  NOTICE  OPERATIONS.md  README.md  ROADMAP.md  ROADMAP_v014_v020.md  ROADMAP_v020_v030.md  ROADMAP_v030_v040.md  SETUP.md  STIER_IMPLEMENTATION_PLAN.md  TECH_DEBT.md  docker-compose.yml  model-manager.plugin  push.sh  pyproject.toml  reddit-claudeai-draft.md  reddit-localllama-draft.md  repo-descriptions.txt  ziXHiPfz
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
BigEd/: CONSOLE_UPGRADE_PLAN.md  HOME_ASSISTANT_HELPER_PLAN.md  STABILITY_GUIDE.md  architecture_comparison.md  build_reference.md  dev_environment.md  fleet_commands.md  qa_test_plan.md  qa_token_blueprint.md
Max Stuff/: build_reference.md  fleet_blueprints.md  security commands.txt
autoresearch/: CLAUDE.md  README.md  profiles.toml  pyproject.toml  results.tsv  run_claude.sh  train.py  train_profile.py
docs/: WHAT_IS_BIGED.md  training_history_example.md  vendors.md
figma-export/: component-map.json  design-tokens.json
fleet/: CLAUDE.md  VSCODE_README.md  a2a.py  ab_testing.py  agent_cards.py  audit.py  audit_log.py  backup_manager.py  billing.py  cache_manager.py  comms.py  compliance.py  config.py  context_manager.py  control_plane.py  cost_tracking.py  cpu_temp.py  dag_builder.py  dag_queue.py  db.py  (+69 more)
(+265 files in other folders)
