[project]
name = "biged"
version = "0.10.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
launcher = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.0.0",
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
]
fleet = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
]
